--- a/views/sales_views.xml
+++ b/views/sales_views.xml
@@ -69,7 +69,7 @@
                                     <field name="company_id" widget="selection" invisible="1"/>
                                     <field name="currency_id" invisible="1"/>
                                     <field name="product_uom"/>
-                                    <field name="qty"/>
+                                    <field name="qty" sum="Total QTY"/>
                                     <field name="note"/>
                                     <field name="price_subtotal" sum="Total Cost"/>
                                 </tree>
